# game-engine-arch

./: README.md
car_game/client/: CMakeLists.txt  GameObject.cpp  GameObject.h  ScriptDemo.cpp
car_game/client/scripts/: modify_position.js  raise_event.js
car_game/server/: CMakeLists.txt  server.cpp
ping_pong/client/: GameObject.h  Makefile  main.cpp
ping_pong/client/scripts/: handle_event.js  modify_position.js
ping_pong/server/: server.cpp
space_shooter/client/: main.cpp
space_shooter/client/scripts/: raise_event.js
space_shooter/server/: server.cpp
